<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".Fragment.MyFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/registerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="캠핑카등록"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/em"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="이메일(수정시사용)" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carNm"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/useridTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carKm"  />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="number" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/pwTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carYear"
                android:textSize="18sp"  />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carYear"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/pwChkTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/carFuel"  />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carFuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="textPersonName"
                android:textCursorDrawable="@drawable/edittxt_cursor" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/genderTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/carAddr"   />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/yearsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/carTel"    />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carInfo"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carAmt"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow >

            <EditText
                android:id="@+id/carAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edittxt"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/img01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="대표이미지" />
        </TableRow>
        <TableRow >

            <ImageButton
                android:id="@+id/imgBtn01"
                android:layout_width="252dp"
                android:layout_height="77dp"
                android:layout_weight="1"
                android:background="@drawable/carbtn01"
                android:scaleType="centerCrop"
                android:tooltipText="대표이미지" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/carOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="다음으로"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>
</ScrollView>